feat(test): TDDの初期テストセットアップを完了
TDD（テスト駆動開発）の「レッド」フェーズを完了させるための初期テストを追加・設定します。

- Playwrightをdev dependencyに追加
- ナビゲーション、レスポンシブ、レイアウトに関するE2Eおよびビジュアルテストのスケルトンを作成
- すべてのテストが失敗することを確認
- Playwrightの設定を更新し、「tests」ディレクトリ全体をスキャンするように変更
- 「test-results」ディレクトリを「.gitignore」に追加
- 「tasks.md」のテストフェーズを完了としてマーク

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.4"
+    "@biomejs/biome": "^2.2.4",
+    "@playwright/test": "^1.55.0"
   }
 }
