--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check": "biome check ."
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.6",
     "@astrojs/react": "^4.3.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.13",
