feat(test): Introduce Vitest and complete T021
- Install Vitest as a dev dependency.
- Add 'test:unit' script to package.json.
- Create vitest.config.ts to exclude Playwright test files.
- Complete T021: Create and verify unit tests for navigation data structure.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "astro": "astro",
     "format": "biome format .",
     "lint": "biome lint .",
-    "check": "biome check ."
+    "check": "biome check .",
+    "test:unit": "vitest"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.6",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
-    "@playwright/test": "^1.55.0"
+    "@playwright/test": "^1.55.0",
+    "vitest": "^3.2.4"
   }
 }
