--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   # `main`ブランチにプッシュするたびにワークフローを実行します。
   # 異なるブランチ名を使用する場合は、`main`をブランチ名に置き換えてください。
   push:
-    branches: [ 001-trpg-web-markdown ]
+    branches: [ main ]
   # このワークフローをGitHubのActionsタブから手動で実行できるようにします。
   workflow_dispatch:
 
